<resources>
    <string name="app_name">Activities</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="logout">Logout</string>
</resources>
